Amélioration détection mappings